<!--TODO : Make translation in malayalam-->
<resources>
    <string name="app_name">Fitness First</string>
    <string name="notifications">Notifications</string>
    <string name="collect_fee">Collect Fee</string>
    <string name="unpaid_members">Unpaid Members</string>
    <string name="members">Members</string>
    <string name="error_message_empty">Empty</string>
    <string name="error_message_digit">Error</string>
    <string name="hello_world">Hello world!</string>
    <string name="submit">Submit</string>
    <string name="main_agent">Main</string>
    <string name="sub_agent">Sub</string>
    <string name="login_details">Login Details</string>
    <string name="ticket_rates">Ticket Rates</string>
    <string name="agent_amount_details">Agent Amount Details</string>
    <string name="member_image">Member Image</string>
    <string name="balance">Balance :</string>
    <string name="joining_date">Joining Date :</string>
    <string name="name">Name:</string>
    <string name="date">Date :</string>
    <string name="member">Member :</string>
    <string name="previous">Previous</string>
    <string name="month_1">Month 1 :</string>
    <string name="month_2">Month 2 :</string>
    <string name="total">Total :</string>
    <string name="amount">Amount :</string>
    <string name="balance_amount">Balance Amount :</string>
    <string name="fee">Fee</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="member_id">Member ID :</string>
    <string name="address">Address :</string>
    <string name="payed_amount">Payed Amount</string>
    <string name="fee_details">Fee Details</string>
</resources>
