<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.Activity_Collect_Fee">

    <!--TODO : Use Sample data for text views-->
    <!--TODO : Separate Edit texts & text views-->
    <!--TODO : Use layout margins-->
    <!--TODO : Use Intent margins-->
    <!--TODO : Use shape button-->
    <!--TODO : Replace space with margins-->

    <!--TODO : Use divider / Upgrade design-->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/date" />

    <!--<Space-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="16dp" />-->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/member" />

    <!--<Space-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="16dp" />-->

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/fee_details" />

    <!--<Space-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="16dp" />-->

    <!--<View-->
        <!--android:id="@+id/divider"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="8dp"-->
        <!--android:background="?android:attr/listDivider" />-->

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_one_intent_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/previous" />

    <!--<Space-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="16dp" />-->

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_one_intent_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/month_1" />

    <!--<Space-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="16dp" />-->

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_one_intent_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/month_2" />

    <!--<Space-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="16dp" />-->

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_one_intent_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/total" />

    <!--<Space-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="16dp" />-->

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/payed_amount" />

    <!--<Space-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="16dp" />-->

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/balance_amount" />

    <!--<Space-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="16dp" />-->

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/shape_button"
        android:text="@string/submit" />

</LinearLayout>